adding new chnages

--- a/.local.env
+++ b/.local.env
@@ -1,1 +1,2 @@
-MONGO_URI = "mongodb+srv://Ecommerce:Ecommerce@cluster1.5mcqziq.mongodb.net/Ecommerce?retryWrites=true&w=majority"
+MONGO_URI = "mongodb+srv://Ecommerce:Ecommerce@cluster1.5mcqziq.mongodb.net/Ecommerce?retryWrites=true&w=majority" 
+AWS_S3_BUCKET = 'pickbazzar-ecommerce'
